...
    required String username,
    required String? profile,
    required String address,
  }) async {
    await sendTelegramMessage(
      "تم إضافة كرت فردي جديد بنجاح!\n"
      "IP: $address\n"
      "اسم المستخدم: $username\n"
      "الفئة: ${profile ?? 'غير محدد'}",
    );
  }

  /// إرسال إشعار إضافة كروت جماعية
...
